--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "0.17.0",
+    "highcharts": "6.0.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-highcharts": "0.0.10",
+    "vue-router": "^3.0.1",
+    "vuex": "3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
